[package]
name = "serpyco-rs"
version = "1.13.0"
edition = "2021"
homepage = "https://github.com/ermakov-oleg/serpyco-rs"
repository = "https://github.com/ermakov-oleg/serpyco-rs"

[lib]
name = "serpyco_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.5", features = ["extension-module", "py-clone"] }
pyo3-ffi = "0.23.2"
speedate = "0.15.0"

dyn-clone = "1.0"
atomic_refcell = "0.1"
nohash-hasher = "*"

uuid = "1"

[build-dependencies]
pyo3-build-config = { version = "0.24.0", features = ["resolve-config"] }

[profile.release]
codegen-units = 1
lto = "thin"
