[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "serpyco_rs._serpyco_rs"

[project]
name = "serpyco-rs"
dynamic = ["version"]
repository = "https://github.com/ermakov-oleg/serpyco-rs"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]

dependencies = ["attributes-doc", "typing-extensions>=4.15.0"]

[tool.coverage.run]
branch = true
source = ["python/serpyco_rs"]

[tool.coverage.report]
show_missing = true
skip_covered = true
