[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "serpyco_rs._serpyco_rs"

[project]
name = "serpyco-rs"
dynamic = ["version"]
repository = "https://github.com/ermakov-oleg/serpyco-rs"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]

dependencies = ["attributes-doc", "typing-extensions>=4.15.0"]

[dependency-groups]
dev = [
    "pytest",
    "coverage[toml]",
    "attrs",
    "maturin>=1,<2",
    "pytz",
    "python-dateutil",
    "multidict",
    "tzdata; sys_platform == 'win32'",
    "nox",
]
lint = [
    { include-group = "dev" },
    "ruff",
]
type_check = [
    { include-group = "dev" },
    "mypy",
    "pyright",
    "types-python-dateutil",
]
bench = [
    { include-group = "dev" },
    "pytest-benchmark[histogram]",
    "tabulate",
]
bench-compare = [
    { include-group = "bench" },
    "serpyco",
    "pydantic",
    "marshmallow",
    "marshmallow-dataclass",
    "mashumaro[orjson]",
    "orjson",
]
all = [
    { include-group = "dev" },
    { include-group = "lint" },
    { include-group = "type_check" },
    { include-group = "bench-compare" },
]

[tool.coverage.run]
branch = true
source = ["python/serpyco_rs"]

[tool.coverage.report]
show_missing = true
skip_covered = true
